--- a/index.html
+++ b/index.html
@@ -27,5 +27,17 @@
            </nav>
        </div>
    </header>
+   <section class="introducao">
+        <div class="conteiner">
+            <h1 class="venda">Camisas de time</h1>
+            <blockquote class="quote-externo">
+                <p>
+                    "Tenha sempre com você seu time do coração"
+                </p>
+                <cite>THIAGO MINGUIM</cite>
+            </blockquote>
+            <a href="produtos.html" class="btn">Orçamento</a>
+        </div>
+   </section>
 </body>
 </html>
