--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
    <header class="header">
        <div class="container">
            <a href="index.htmll" class="grid-4">
-               <img src="img/logo chazy.svg" alt="Logo marca">
+               <img src="img/logo chazy2.svg" alt="Logo marca">
            </a>
            <nav class="header_menu" class="grid-12">
                <ul>
@@ -88,6 +88,76 @@
             
         </div>
     </section>
+    <!-- qualidade -->
+    <section class="qualidade container">
+        <h2 class="subtitulo">Qualidade</h2>
+        <img src="img/qualidade.chazy.svg" alt="chazystore">
+        <ul class="qualidade_lista">
+            <li class="grid-1-3">
+                <h3>Durabilidade</h3>
+                <p>Camisas de primeira linha, com ótima durabilidade.</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Design</h3>
+                <p>O melhor design disponivel no mercado.</p>
+            </li>
+            <li class="grid-1-3">
+                <h3>Sustentabilidade</h3>
+                <p>Camisas de primeira linha, com ótima durabilidade.</p>
+            </li>
+        </ul>
+        <div class="call">
+            <p>Conheça mais a nossa história</p>
+            <a href="sobre.html" class="btn btn-preto">Sobre</a>
+        </div>
+    </section>
+    <section class="quebra">
+        <blockquote class="quote-externo container">
+            <p>
+                "Boas memórias começam com o que se veste!"
+            </p>
+            <cite>THIAGO MINGUIM</cite>
+        </blockquote>
+    </section>
+    <footer>
+        <div class="footer">
+        <div class="container">
+
+            <div class="grid-1-3 footer_historia">
+                <h3>
+                    Nossa história
+                </h3>
+                <p>
+                    Site desenvolvido para estudos e um futuro empreendimento.
+                </p>
+            </div>
+
+            <div class="grid-1-3 footer_contato">
+                <h3>
+                    Contato
+                </h3>
+                <ul>
+                    <li>- 34 9 84197182</li>
+                    <li>- thiago.minguim@gmail.com</li>
+                    <li>- Uberaba - MG</li>
+                </ul>
+            </div>
+            <div class="grid-1-3 footer_redes">
+                <h3>Contato</h3>
+                <ul>
+                    <li><a href="" target="_blank"><img src="img/redes-sociais/facebook.svg" alt=""></a></li>
+                    <li><a href="" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
+                    <li><a href="" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
+                </ul>
+            </div>
+        </div>
+        </div>
+        <div class="copy">
+            <div class="container">
+                <p class="grid-16">ChazyStore 2021 -  Alguns direitos reservados.</p>
+            </div>
+        </div>
+    </footer>
   
 </body>
 </html>
