--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -48,7 +48,7 @@
         <cite>Thiago Minguim</cite>
     </blockquote>
     <blockquote class="quote_cliente">
-        <p>amerelo cor de banana</p>
+        <p>Morango é vermelho</p>
         <cite>Thiago Minguim</cite>
     </blockquote>
    </section>
