--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="index.html" class="grid-4">
           <img src="img/logo chazy2.svg" alt="Logo marca" />
         </a>
-        <nav class="header_menu" class="grid-12">
+        <nav class="header_menu grid-12">
           <ul>
             <li><a href="sobre.html">Sobre</a></li>
             <li><a href="produtos.html">Produtos</a></li>
@@ -131,13 +131,13 @@
         <p>Conheça mais a nossa história</p>
         <a href="sobre.html" class="btn btn-preto">Sobre</a>
       </div>
-    </section>
-    <section class="quebra">
+    </div>
+    <div class="quebra">
       <blockquote class="quote-externo container">
         <p>"Boas memórias começam com o que se veste!"</p>
         <cite>THIAGO MINGUIM</cite>
       </blockquote>
-    </section>
+    </div>
     <footer>
       <div class="footer">
         <div class="container">
