--- a/contato.html
+++ b/contato.html
@@ -41,16 +41,22 @@
 <!-- Formulario -->
     
     <section data-anime="1000" class="fadeInDown contato container">
-        <form id="form_orcamento" class="contato_form grid-8">
+        <form id="form_orcamento" method="POST" action="./enviar.php" class="contato_form grid-8 formphp">
             <label for="nome">Nome</label>
-            <input type="text" name="nome" id="nome">
+            <input type="text" id="nome" name="nome" required>
             <label for="email">E-mail</label>
-            <input type="text" name="email" id="email">
+            <input type="email" id="email" name="email" required>
             <label for="telefone">Telefone</label>
-            <input type="text" name="telefone" id="telefone">
-            <label for="espec">Especificações</label>
-            <textarea name="" id="espec" cols="30" rows="10"></textarea>
-            <button type="submit" class="btn btn-preto">Enviar</button>
+            <input type="text" id="telefone" name="telefone">
+
+            <label class="nao-aparece">Se você não é um robô, deixe em branco.</label>
+            <input type="text" class="nao-aparece" name="leaveblank">
+            <label class="nao-aparece">Se você não é um robô, não mude este campo.</label>
+            <input type="text" class="nao-aparece" name="dontchange" value="http://">
+
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" name="mensagem" required></textarea>
+            <button id="enviar" name="enviar" type="submit" class="btn btn-preto">Enviar</button>
         </form>
         <div class="contato_dados grid-8">
             <h3>Dados</h3>
