--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <ul class="qualidade_lista">
             <li class="grid-1-3">
                 <h3>Durabilidade</h3>
-                <p>Camisas de primeira linha, com ótima durabilidade.</p>
+                <p>Camisas de primeira linha, com ótima durabilidade!</p>
             </li>
             <li class="grid-1-3">
                 <h3>Design</h3>
