--- a/index.html
+++ b/index.html
@@ -131,13 +131,13 @@
         <p>Conheça mais a nossa história</p>
         <a href="sobre.html" class="btn btn-preto">Sobre</a>
       </div>
-    </div>
-    <div class="quebra">
+      </section>
+    <section class="quebra">
       <blockquote class="quote-externo container">
         <p>"Boas memórias começam com o que se veste!"</p>
         <cite>THIAGO MINGUIM</cite>
       </blockquote>
-    </div>
+    </section>
     <footer>
       <div class="footer">
         <div class="container">
@@ -185,5 +185,6 @@
     <script src="js/simple-anime.js"></script>
     <script src="js/simple-slide.js"></script>
     <script src="js/script.js"></script>
+</body>
   </body>
 </html>
