--- a/portfolio.html
+++ b/portfolio.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pt-br>
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -23,7 +23,7 @@
            </a>
            <nav class="header_menu" class="grid-12">
                <ul>
-                   <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
+                   <li><a href="sobre.html">Sobre</a></li>
                    <li><a href="produtos.html">Produtos</a></li>
                    <li><a href="portfolio.html" class="menu_ativo" >Portfólio</a></li>
                    <li><a href="contato.html">Contato</a></li>
