--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/grid.css" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/responsivo.css" />
+    <script>document.documentElement.classList.add("js");</script>
+
     <title>ChazyStore</title>
   </head>
   <body>
@@ -66,7 +68,6 @@
             do tecido de uma camisa Authentic.
           </p>
         </li>
-
         <li class="grid-1-3">
           <div class="produtos_icone">
             <img src="img/produtos/camisa.svg" alt="logo camisa" />
@@ -177,5 +178,8 @@
         </div>
       </div>
     </footer>
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
   </body>
 </html>
