--- a/produtos.html
+++ b/produtos.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsivo.css">
     <link rel="stylesheet" href="css/produtos.css">
-    
+    <script>document.documentElement.classList.add("js");</script>
+
     
     <title>ChazyStore - Produtos</title>
 </head>
@@ -169,6 +170,8 @@
             </div>
         </div>
     </footer>
-  
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/simple-anime.js"></script>
+     <script src="./js/script.js"></script>
 </body>
 </html>
