--- a/portfolio.html
+++ b/portfolio.html
@@ -1,108 +1,124 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsivo.css">
-    <link rel="stylesheet" href="css/portfolio.css">
-    
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsivo.css" />
+    <link rel="stylesheet" href="css/portfolio.css" />
+    <script>
+      document.documentElement.classList.add("js");
+    </script>
+
     <title>ChazyStore - Portfólio</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- Header -->
-   <header class="header">
-       <div class="container">
-           <a href="index.html" class="grid-4">
-               <img src="img/logo chazy2.svg" alt="Logo marca">
-           </a>
-           <nav class="header_menu" class="grid-12">
-               <ul>
-                   <li><a href="sobre.html">Sobre</a></li>
-                   <li><a href="produtos.html">Produtos</a></li>
-                   <li><a href="portfolio.html" class="menu_ativo" >Portfólio</a></li>
-                   <li><a href="contato.html">Contato</a></li>
-               </ul>
-           </nav>
-       </div>
-   </header>
-   <!-- produtos -->
-   <section class="introducao-interna interna_portfolio">
-        <div class="conteiner">
-            <h1 class="venda">Portfolio</h1>
-            <p>Conheça as camisas</p>
-        </div>
-   </section>
-   <section class="container">
-       <blockquote class="quote_cliente">
-           <p>Camisas de times varios modelos e varios tamanhos, para todos os gostos !</p>
-           <cite>Thiago Minguim</cite>
-       </blockquote>
-   </section>
+    <header class="header">
+      <div class="container">
+        <a href="index.html" class="grid-4">
+          <img src="img/logo chazy2.svg" alt="Logo marca" />
+        </a>
+        <nav class="header_menu" class="grid-12">
+          <ul>
+            <li><a href="sobre.html">Sobre</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="portfolio.html" class="menu_ativo">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- produtos -->
+    <section class="introducao-interna interna_portfolio">
+      <div class="conteiner">
+        <h1 class="venda">Portfolio</h1>
+        <p>Conheça as camisas</p>
+      </div>
+    </section>
+    <section class="container fadeInDown" data-slide="quote" data-anime="1200">
+      <blockquote class="quote_cliente">
+        <p>
+          Camisas de times varios modelos e varios tamanhos, para todos os
+          gostos !
+        </p>
+        <cite>Thiago Minguim</cite>
+      </blockquote>
+    </section>
 
-   <section class="portfolio">
-    <div class=container>
+    <section class="portfolio">
+      <div class="container">
         <ul class="portfolio_lista">
-            <li class="grid-8"><img src="img/portfolio/retro.jpg" alt="liverpool"></li>
-            <li class="grid-8"><img src="img/portfolio/passeio.jpg" alt="liverpool"></li>
-            <li class="grid-16 ter"><img src="img/portfolio/esporte.jpg" alt="liverpool"></li>
+          <li class="grid-8">
+            <img src="img/portfolio/retro.jpg" alt="liverpool" />
+          </li>
+          <li class="grid-8">
+            <img src="img/portfolio/passeio.jpg" alt="liverpool" />
+          </li>
+          <li class="grid-16 ter">
+            <img src="img/portfolio/esporte.jpg" alt="liverpool" />
+          </li>
         </ul>
-    </div>
-</section>
+      </div>
+    </section>
 
-  
     <section class="quebra">
-        <blockquote class="quote-externo container">
-            <p>
-                "Boas memórias começam com o que se veste!"
-            </p>
-            <cite>THIAGO MINGUIM</cite>
-        </blockquote>
+      <blockquote class="quote-externo container">
+        <p>"Boas memórias começam com o que se veste!"</p>
+        <cite>THIAGO MINGUIM</cite>
+      </blockquote>
     </section>
     <footer>
-        <div class="footer">
+      <div class="footer">
         <div class="container">
+          <div class="grid-1-3 footer_historia">
+            <h3>Nossa história</h3>
+            <p>Site desenvolvido para estudos e um futuro empreendimento.</p>
+          </div>
 
-            <div class="grid-1-3 footer_historia">
-                <h3>
-                    Nossa história
-                </h3>
-                <p>
-                    Site desenvolvido para estudos e um futuro empreendimento.
-                </p>
-            </div>
-
-            <div class="grid-1-3 footer_contato">
-                <h3>
-                    Contato
-                </h3>
-                <ul>
-                    <li>- 34 9 84197182</li>
-                    <li>- thiago.minguim@gmail.com</li>
-                    <li>- Uberaba - MG</li>
-                </ul>
-            </div>
-            <div class="grid-1-3 footer_redes">
-                <h3>Contato</h3>
-                <ul>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/facebook.svg" alt=""></a></li>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
-                </ul>
-            </div>
+          <div class="grid-1-3 footer_contato">
+            <h3>Contato</h3>
+            <ul>
+              <li>- 34 9 84197182</li>
+              <li>- thiago.minguim@gmail.com</li>
+              <li>- Uberaba - MG</li>
+            </ul>
+          </div>
+          <div class="grid-1-3 footer_redes">
+            <h3>Contato</h3>
+            <ul>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/facebook.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/twitter.svg" alt="twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+      <div class="copy">
+        <div class="container">
+          <p class="grid-16">ChazyStore 2021 - Alguns direitos reservados.</p>
         </div>
-        <div class="copy">
-            <div class="container">
-                <p class="grid-16">ChazyStore 2021 -  Alguns direitos reservados.</p>
-            </div>
-        </div>
+      </div>
     </footer>
-  
-</body>
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
