--- a/sobre.html
+++ b/sobre.html
@@ -1,130 +1,142 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/reset.css">
-    <link rel="stylesheet" href="css/grid.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/responsivo.css">
-    <link rel="stylesheet" href="css/sobre.css">
-    
-    <title>ChazyStore - Sobre</title>
-</head>
-<body>
-    <!-- Header -->
-   <header class="header">
-       <div class="container">
-           <a href="index.html" class="grid-4">
-               <img src="img/logo chazy2.svg" alt="Logo marca">
-           </a>
-           <nav class="header_menu" class="grid-12">
-               <ul>
-                   <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
-                   <li><a href="produtos.html">Produtos</a></li>
-                   <li><a href="portfolio.html">Portfólio</a></li>
-                   <li><a href="contato.html">Contato</a></li>
-               </ul>
-           </nav>
-       </div>
-   </header>
-   <!-- produtos -->
-   <section class="introducao-interna interna_sobre">
-        <div class="conteiner">
-            <h1 class="venda">Sobre</h1>
-            <p>conheça mais sobre a chazy store</p>
-        </div>
-   </section>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="../img/favicon.ico" type="image/x-icon" />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/grid.css" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsivo.css" />
+    <link rel="stylesheet" href="css/sobre.css" />
+    <script>document.documentElement.classList.add("js");</script>
 
-   <!-- missao, visao, valores -->
-   <section class="missao_sobre container">
-    <div class="grid-10">
+    <title>ChazyStore - Sobre</title>
+  </head>
+  <body>
+    <!-- Header -->
+    <header class="header">
+      <div class="container">
+        <a href="index.html" class="grid-4">
+          <img src="img/logo chazy2.svg" alt="Logo marca" />
+        </a>
+        <nav class="header_menu" class="grid-12">
+          <ul>
+            <li><a href="sobre.html" class="menu_ativo">Sobre</a></li>
+            <li><a href="produtos.html">Produtos</a></li>
+            <li><a href="portfolio.html">Portfólio</a></li>
+            <li><a href="contato.html">Contato</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <!-- produtos -->
+    <section class="introducao-interna interna_sobre">
+      <div class="conteiner">
+        <h1 class="venda">Sobre</h1>
+        <p>conheça mais sobre a chazy store</p>
+      </div>
+    </section>
+
+    <!-- missao, visao, valores -->
+    <section class="missao_sobre container">
+      <div class="grid-10">
         <h2 class="subtitulo-interno">História, Missão e Visão</h2>
-        <p>Site feito para estudos, e aprimoramento de habilidades em html, css e JavaScript.</p>
-        <p>Conheça os nossos produtos, pergunte para os nossos clientes e descubra a maravilha de comprar na ChazyStore.</p>
-    </div>
-    <div class="grid-6">
+        <p>
+          Site feito para estudos, e aprimoramento de habilidades em html, css e
+          JavaScript.
+        </p>
+        <p>
+          Conheça os nossos produtos, pergunte para os nossos clientes e
+          descubra a maravilha de comprar na ChazyStore.
+        </p>
+      </div>
+      <div class="grid-6">
         <h2 class="subtitulo-interno">Valores</h2>
         <ul>
-            <li>- Foco no cliente</li>
-            <li>- Agilidade</li>
-            <li>- Segurança</li>
+          <li>- Foco no cliente</li>
+          <li>- Agilidade</li>
+          <li>- Segurança</li>
         </ul>
-    </div>
-    <div class="grid-16 foto-equipe">
-        <img src="img/equipe-chazystore.png" alt="Equipe Chazy Store">
-    </div>
-   </section>
+      </div>
+      <div class="grid-16 foto-equipe">
+        <img src="img/equipe-chazystore.png" alt="Equipe Chazy Store" />
+      </div>
+    </section>
 
     <!-- qualidade -->
     <section class="qualidade container">
-        <h2 class="subtitulo">Qualidade</h2>
-        <img src="img/qualidade.chazy.svg" alt="chazystore">
-        <ul class="qualidade_lista">
-            <li class="grid-1-3">
-                <h3>Durabilidade</h3>
-                <p>Camisas de primeira linha, com ótima durabilidade.</p>
-            </li>
-            <li class="grid-1-3">
-                <h3>Design</h3>
-                <p>O melhor design disponivel no mercado.</p>
-            </li>
-            <li class="grid-1-3">
-                <h3>Sustentabilidade</h3>
-                <p>Camisas de primeira linha, com ótima durabilidade.</p>
-            </li>
-        </ul>
+      <h2 class="subtitulo">Qualidade</h2>
+      <img src="img/qualidade.chazy.svg" alt="chazystore" />
+      <ul class="qualidade_lista">
+        <li class="grid-1-3">
+          <h3>Durabilidade</h3>
+          <p>Camisas de primeira linha, com ótima durabilidade.</p>
+        </li>
+        <li class="grid-1-3">
+          <h3>Design</h3>
+          <p>O melhor design disponivel no mercado.</p>
+        </li>
+        <li class="grid-1-3">
+          <h3>Sustentabilidade</h3>
+          <p>Camisas de primeira linha, com ótima durabilidade.</p>
+        </li>
+      </ul>
     </section>
     <section class="quebra">
-        <blockquote class="quote-externo container">
-            <p>
-                "Boas memórias começam com o que se veste!"
-            </p>
-            <cite>THIAGO MINGUIM</cite>
-        </blockquote>
+      <blockquote class="quote-externo container">
+        <p>"Boas memórias começam com o que se veste!"</p>
+        <cite>THIAGO MINGUIM</cite>
+      </blockquote>
     </section>
     <footer>
-        <div class="footer">
+      <div class="footer">
         <div class="container">
+          <div class="grid-1-3 footer_historia">
+            <h3>Nossa história</h3>
+            <p>Site desenvolvido para estudos e um futuro empreendimento.</p>
+          </div>
 
-            <div class="grid-1-3 footer_historia">
-                <h3>
-                    Nossa história
-                </h3>
-                <p>
-                    Site desenvolvido para estudos e um futuro empreendimento.
-                </p>
-            </div>
-
-            <div class="grid-1-3 footer_contato">
-                <h3>
-                    Contato
-                </h3>
-                <ul>
-                    <li>- 34 9 84197182</li>
-                    <li>- thiago.minguim@gmail.com</li>
-                    <li>- Uberaba - MG</li>
-                </ul>
-            </div>
-            <div class="grid-1-3 footer_redes">
-                <h3>Contato</h3>
-                <ul>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/facebook.svg" alt=""></a></li>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/instagram.svg" alt="instagram"></a></li>
-                    <li><a href="" target="_blank"><img src="img/redes-sociais/twitter.svg" alt="twitter"></a></li>
-                </ul>
-            </div>
+          <div class="grid-1-3 footer_contato">
+            <h3>Contato</h3>
+            <ul>
+              <li>- 34 9 84197182</li>
+              <li>- thiago.minguim@gmail.com</li>
+              <li>- Uberaba - MG</li>
+            </ul>
+          </div>
+          <div class="grid-1-3 footer_redes">
+            <h3>Contato</h3>
+            <ul>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/facebook.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/instagram.svg" alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="" target="_blank"
+                  ><img src="img/redes-sociais/twitter.svg" alt="twitter"
+                /></a>
+              </li>
+            </ul>
+          </div>
         </div>
+      </div>
+      <div class="copy">
+        <div class="container">
+          <p class="grid-16">ChazyStore 2021 - Alguns direitos reservados.</p>
         </div>
-        <div class="copy">
-            <div class="container">
-                <p class="grid-16">ChazyStore 2021 -  Alguns direitos reservados.</p>
-            </div>
-        </div>
+      </div>
     </footer>
-  
-</body>
+    <script src="./js/simple-slide.js"></script>
+    <script src="./js/simple-anime.js"></script>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
